--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "gulp"
+    "start": "gulp",
+    "build": "gulp build"
   },
   "keywords": [],
   "author": "",
