--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "gulp",
+    "dev": "gulp dev",
     "build": "gulp build",
     "deploy": "gulp deploy"
   },
